app: routing: implement routing API
Implement a routing API for dynamic header menu's.

Signed-off-by: Michel Megens <michel@michelmegens.net>

--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -12,9 +12,9 @@
           </div>
           <div class="card-form">
             <form [formGroup]="forgotPasswordForm">
-              <div class="form-row">
+              <div class="form-row row">
                 <i class="material-icons">email</i>
-                <mat-form-field color="accent">
+                <mat-form-field class="input-width" color="accent">
                   <input type="text" formControlName="email" [errorStateMatcher]="matcher" matInput placeholder="Email address"/>
                   <mat-error *ngIf="email.hasError('required')">
                     Email address is <strong>required</strong>!
@@ -24,18 +24,18 @@
                   </mat-error>
                 </mat-form-field>
               </div>
-              <div class="form-row">
+              <div class="form-row row">
                 <i class="material-icons">lock_outline</i>
-                <mat-form-field color="accent">
+                <mat-form-field class="input-width" color="accent">
                   <input type="password" formControlName="password" [errorStateMatcher]="matcher" matInput placeholder="New password"/>
                   <mat-error *ngIf="password.hasError('required')">
                     Password is <strong>required</strong>!
                   </mat-error>
                 </mat-form-field>
               </div>
-              <div class="form-row">
+              <div class="form-row row">
                 <i class="material-icons">lock_outline</i>
-                <mat-form-field color="accent">
+                <mat-form-field class="input-width" color="accent">
                   <input type="password" formControlName="confirmPassword" [errorStateMatcher]="matcher" matInput placeholder="Confirm password"/>
                   <mat-error *ngIf="confirmPassword.hasError('required')">
                     Password is <strong>required</strong>!
@@ -45,9 +45,9 @@
                   </mat-error>
                 </mat-form-field>
               </div>
-              <div class="form-row">
+              <div class="form-row row">
                 <i class="material-icons">security</i>
-                <mat-form-field color="accent">
+                <mat-form-field class="input-width" color="accent">
                   <input type="text" formControlName="token" [errorStateMatcher]="matcher" matInput placeholder="Reset token"/>
                   <mat-error *ngIf="token.hasError('required')">
                     Confirmation token is <strong>required</strong>!
