--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -5,16 +5,16 @@
       <app-header></app-header>
     </div>
     <div class="row" *ngIf="!isLoggedIn">
-      <div class="col-md-4 col-sm-6 col-md-offset-4 col-sm-offset-3">
+      <div class="col-lg-4 col-md-4 col-sm-6 col-md-offset-4 col-sm-offset-3 login-panel">
         <div class="card">
           <div class="card-header">
             <h2>Login</h2>
           </div>
           <div class="card-form">
             <form [formGroup]="loginForm">
-              <div class="form-row">
+              <div class="form-row row">
                 <i class="material-icons">email</i>
-                <mat-form-field color="accent">
+                <mat-form-field class="input-width" color="accent">
                   <input type="text" formControlName="email" [errorStateMatcher]="matcher" matInput placeholder="Email address"/>
                   <mat-error *ngIf="email.hasError('required')">
                     Email address is <strong>required</strong>!
@@ -30,9 +30,9 @@
                   </mat-error>
                 </mat-form-field>
               </div>
-              <div class="form-row">
+              <div class="form-row row">
                 <i class="material-icons">lock_outline</i>
-                <mat-form-field color="accent">
+                <mat-form-field class="input-width" color="accent">
                   <input type="password" formControlName="password" [errorStateMatcher]="matcher" matInput placeholder="Password"/>
 
                   <mat-error *ngIf="password.hasError('required')">
