--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -41,9 +41,9 @@
               </div>
             </div>
             <div class="col-md-5 register-element">
-              <div class="form-part">
                 <form [formGroup]="registerForm" class="register-form">
                   <div class="row">
+                    <div class="col-xs-12">
                     <mat-form-field class="input-full-width">
                       <input matInput formControlName="email" placeholder="Email"
                              [errorStateMatcher]="matcher">
@@ -52,10 +52,11 @@
                         Enter a <strong>valid</strong> email address.
                       </mat-error>
                     </mat-form-field>
+                    </div>
                   </div>
 
                   <div class="row">
-                    <div class="col-md-6 firstname">
+                    <div class="col-md-6 col-xs-12 ">
                       <mat-form-field class="input-full-width">
                         <input matInput formControlName="password" type="password" placeholder="Password"
                                [errorStateMatcher]="matcher">
@@ -64,7 +65,7 @@
                         </mat-error>
                       </mat-form-field>
                     </div>
-                    <div class="col-md-6 lastname">
+                    <div class="col-md-6 col-xs-12 ">
                       <mat-form-field class="input-full-width">
                         <input matInput [formControl]="passwordConfirm" type="password" placeholder="Confirm password"
                                [errorStateMatcher]="matcher">
@@ -84,7 +85,7 @@
 
 
                   <div class="row">
-                    <div class="col-md-6 firstname">
+                    <div class="col-md-6 col-xs-12">
                       <mat-form-field class="input-full-width">
                         <input matInput placeholder="First name" formControlName="firstName"
                                [errorStateMatcher]="matcher">
@@ -94,7 +95,7 @@
                         <!--<mat-hint>Errors appear instantly!</mat-hint>-->
                       </mat-form-field>
                     </div>
-                    <div class="col-md-6 lastname">
+                    <div class="col-md-6 col-xs-12">
                       <mat-form-field class="input-full-width">
                         <input matInput placeholder="Last name" formControlName="lastName"
                                [errorStateMatcher]="matcher">
@@ -108,8 +109,8 @@
 
 
                   <div class="row">
-                    <div class="col-md-4 firstname">
-                      <mat-form-field>
+                    <div class="col-md-4 col-xs-12">
+                      <mat-form-field class="input-full-width">
                         <mat-select placeholder="Country" [formControl]="countryCodeControl">
                           <mat-option value="1" >USA (+1)</mat-option>
                           <mat-option value="44">UK (+44)</mat-option>
@@ -330,7 +331,7 @@
                         </mat-select>
                       </mat-form-field>
                     </div>
-                    <div class="col-md-8 lastname">
+                    <div class="col-md-8 col-xs-12">
                       <mat-form-field class="input-full-width">
                         <input matInput placeholder="Phone number" [formControl]="phoneNumberControl"
                                [errorStateMatcher]="phoneMatcher">
@@ -348,20 +349,19 @@
                     </div>
                   </div>
 
-                  <div class="row">
-                    <div class="col-md-8 terms">
+                  <div class="row last">
+                    <div class="col-sm-8 col-xs-12 terms">
                       <mat-checkbox [checked]="terms" (change)="terms = !terms">
-                        I agree to the terms and conditions
+                        Accept privacy policy
                       </mat-checkbox>
                     </div>
 
-                    <div class="col-md-4">
+                    <div class="col-sm-4 col-xs-12">
                       <button class="register" [disabled]="!isValidForm()" (click)="onSubmitClicked()"
                               type="submit" mat-raised-button>REGISTER</button>
                     </div>
                   </div>
                 </form>
-              </div>
             </div>
           </div>
         </div>
