--- a/src/app/pages/forgot-password/forgot-password.component.css
+++ b/src/app/pages/forgot-password/forgot-password.component.css
@@ -4,7 +4,20 @@
   z-index: 1;
 }
 
+.background{
+  background: url("../../../assets/img/login_bg.jpg") no-repeat center center;
+  height: 100%;
+  background-size: cover;
+  filter: brightness(40%);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 0;
+}
+
 .card{
+  margin-bottom: 20px;
   position: relative;
   padding: 20px;
   display: flex;
@@ -34,6 +47,12 @@
 @keyframes card {
   from {top: -40px;}
   to {top: 0;}
+}
+
+@media only screen and (max-width: 400px) {
+  .input-width {
+    width: 80% !important;
+  }
 }
 
 .card-header{
@@ -98,4 +117,12 @@
 
 .card-footer button{
   color: #e91e63;
+}
+
+.form-row i{
+  position: relative;
+  top: -5px;
+  margin-right: 15px;
+  color: #555;
+  padding-left: 3%;
 }
