--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -3,11 +3,22 @@
   height: 100%;
   background-size: cover;
   filter: brightness(40%);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 0;
+}
+
+@media (min-height: 1080px) and (min-width: 1920px) {
+  .login-panel {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
 }
 
 .container{
@@ -16,7 +27,14 @@
   z-index: 1;
 }
 
+@media only screen and (max-width: 400px) {
+  .input-width {
+    width: 80% !important;
+  }
+}
+
 .card{
+  margin-bottom: 20px;
   position: relative;
   padding: 20px;
   display: flex;
@@ -102,6 +120,7 @@
   top: -5px;
   margin-right: 15px;
   color: #555;
+  padding-left: 3%;
 }
 
 .card-footer{
