Update device detector package.
Signed-off-by: Michel Megens <michel@michelmegens.net>

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="desc">
                   <h4>Data analysis</h4>
-                  <p>Sensate is not just an elaborate data store. It's also capable of analyzing your data.</p>
+                  <p>Sensate IoT is not just an elaborate data store. It's also capable of analyzing your data.</p>
                 </div>
               </div>
               <div class="feature">
@@ -27,7 +27,7 @@
                 </div>
                 <div class="desc">
                   <h4>RESTful API</h4>
-                  <p>Sensate comes with a powerful Sensate API; allowing <i>you</i> to customize every element.</p>
+                  <p>Sensate IoT comes with a powerful Sensate API; allowing <i>you</i> to customize every element.</p>
                 </div>
               </div>
               <div class="feature">
@@ -36,7 +36,7 @@
                 </div>
                 <div class="desc">
                   <h4>Built Audience</h4>
-                  <p>There is also a fully customizable dashboard to manage Sensate users and sensors.</p>
+                  <p>There is also a fully customizable dashboard to manage Sensate IoT users and sensors.</p>
                 </div>
               </div>
             </div>
